--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./new.sh"
+    "start": "./edit.sh",
+    "show": "./show.sh"
   },
   "keywords": [],
   "author": "",
